--- a/rest-service/src/main/resources/application.yaml
+++ b/rest-service/src/main/resources/application.yaml
@@ -13,3 +13,6 @@ spring:
       bootstrap-servers: ${KAFKA_URL:localhost:29092}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+springdoc:
+  swagger-ui:
+    path: /swagger
